fix style issue regarding not stretching textarea

--- a/web-app/src/client/public/css/global.css
+++ b/web-app/src/client/public/css/global.css
@@ -120,6 +120,7 @@ body {
 
 .h1 {
     font-size: var(--fs-600);
+    margin: 0 auto;
 }
 
 
