--- a/web-app/src/client/public/css/views.css
+++ b/web-app/src/client/public/css/views.css
@@ -104,8 +104,10 @@
 /* ------------- Individual Blog ------------ */
 #individual-blog {
     align-self: flex-start;
+    width: 100%;
     max-width: 45rem;
-    margin-top: 1rem;
+    /* Margin top should be large enough so that it doesn't touch menu toggle on smaller screens. */
+    margin-top: 2rem;
     --custom-space: 1.75rem;
 }
 
@@ -148,7 +150,8 @@
 }
 
 #signup .form-group,
-#login .form-group {
+#login .form-group,
+#add-blog .form-group {
     display: flex;
     flex-direction: column;
     --fs-error: var(--fs-350);
@@ -162,13 +165,15 @@
 }
 
 #signup .form-group label,
-#login .form-group label {
+#login .form-group label,
+#add-blog .form-group label {
     text-align: right;
     cursor: pointer;
 }
 
 #login input,
-#signup input {
+#signup input,
+#add-blog input {
     font-size: var(--fs-450);
     text-align: center;
     direction: rtl;
@@ -191,7 +196,8 @@
 }
 
 #signup form button,
-#login form button {
+#login form button,
+#add-blog form button {
     /* layout related */
     max-width: 10rem;
     align-self: center;
@@ -208,7 +214,8 @@
 }
 
 #signup form button:hover,
-#login form button:hover {
+#login form button:hover,
+#add-blog form button:hover {
     background-color: black;
     color: white;
 }
@@ -219,7 +226,8 @@
     Also we cannot use pseudo-elements on <input>. See https://stackoverflow.com/a/4660434.
 */
 #signup form .form-group[data-error]:not(:focus-within)::after,
-#login form .form-group[data-error]:not(:focus-within)::after {
+#login form .form-group[data-error]:not(:focus-within)::after,
+#add-blog form .form-group[data-error]:not(:focus-within)::after {
     content: attr(data-error);
     position: absolute;
     display: block;
@@ -232,7 +240,8 @@
 }
 
 #login form .form-group[data-error] input:not(:focus),
-#signup form .form-group[data-error] input:not(:focus) {
+#signup form .form-group[data-error] input:not(:focus),
+#add-blog form .form-group[data-error] input:not(:focus) {
     background-color: var(--clr-pale-red);
 }
 
@@ -245,7 +254,8 @@ form .form-group[data-error]::after {
 
 /* We need high enough specificity below */
 #page[aria-hidden="true"] #signup form .form-group[data-error]::after,
-#page[aria-hidden="true"] #login form .form-group[data-error]::after {
+#page[aria-hidden="true"] #login form .form-group[data-error]::after,
+#page[aria-hidden="true"] #add-blog form .form-group[data-error]::after {
     /* this is the things that fixes the bug. */
     opacity: 0;
     transform: translateY(calc(2 * var(--fs-error)));
@@ -309,4 +319,48 @@ form .form-group[data-error]::after {
 
 #login input[type="checkbox"] {
     cursor: pointer;
+}
+
+
+/* ------------ Add blog -------------- */
+
+#add-blog {
+    --custom-max-width: calc(var(--fs-450) * 40);
+    min-width: min(var(--custom-max-width), 80vw);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    min-height: 70%;
+}
+
+
+#add-blog form {
+    /* form is a child of #add-blog, so it's a flex item. */
+    /*  based on https://stackoverflow.com/a/24979148. Though it has a minor problem. See "przemcio" comment
+        below the answer.
+    */
+    flex: 1 1 auto;
+    display: flex;
+    flex-direction: column;
+    direction: rtl;
+    --custom-space: 1rem;
+    /* background-color: rgb(199, 195, 195); */
+}
+
+#add-blog form input[type="text"] {
+    padding: .25rem .75rem;
+    direction: rtl;
+    text-align: right;
+}
+
+#add-blog form .body-from-group {
+    flex: 1 1 auto;
+    /* background-color: aquamarine; */
+}
+
+#add-blog form textarea {
+    font-size: inherit;
+    flex-grow: 1;
+    padding: .5rem;
+    border-radius: .5rem;
 }
